src/scss/layout/_header.scss
// Header styles

header {
	background-color: $white;

	form {
		align-items: center;
		display: flex;
	}

	// Styles for the search container
	.search-container {
		svg {
			fill: white;
			height: rem(24);
			margin: rem(-29);
			width: rem(24);
			z-index: 1;
		}

		input[type="search"] {
			border: 0;
			border-radius: 50%;
			outline: none;
			padding: rem(8) rem(16);
			width: rem(16);

			&:focus {
				border-radius: rem(28);
				padding-left: rem(32);
				width: rem(160);
			}
		}
	}

	.site-nav-wrapper {
		background-color: $navy-light;
		width: 100%;

		.site-nav {
			.nav-wideScreen {
				display: none;
			}

			.nav-smallScreen {
				display: flex;
				flex-direction: column;
				position: relative;

				.starter-nav {
					display: flex;
					flex-direction: row;
					justify-content: space-between;
					margin: auto;
					padding: 0 rem(16);
					width: 100%;

					// Toggle menu button on mobile design
					// Override the default button styles from _base.scss and apply the new style
					button {
						background: none;
						border: none;
						border-radius: 0;
						box-shadow: none;
						color: $white;
						padding: rem(8);

						svg {
							height: rem(32);
							padding: rem(3.2);
							pointer-events: none;
							width: rem(32);
						}
					}

					button::before {
						content: none;
					}

					button:hover,
					button:focus {
						background-color: $orange-focus;
						color: $navy-light;
					}

					#menuToggleButton::after {
						content: "Menu";
					}
				}
			}

			// Styles for the navigation menu
			nav.primary-nav {
				background: $navy-dark;
				display: none;
				position: absolute;
				top: rem(48);
				width: 100vw;
				z-index: 2;

				a {
					border-bottom: solid rem(2);
					color: $white;
					display: block;
					float: none;
					font-size: rem(18) !important; // Enactors.css in infusion uses !important on this element
					font-weight: $font-weight-normal;
					margin: rem(16) rem(16);
					text-align: left;
					white-space: nowrap;

					&:hover,
					&:focus {
						color: $navy-light;
					}
				}
			}
		}
	}
}

@media screen and (min-width: rem(1024)) {
	header {
		.search-container {
			margin-left: rem(80);

			svg {
				margin: rem(-40);
			}

			input[type="search"],
			input[type="search"]:focus {
				border-radius: rem(28);
				padding: rem(16) rem(48);
				width: rem(240);
			}
		}

		.site-nav-wrapper {
			.site-nav {
				justify-content: space-around;

				.nav-smallScreen {
					display: none;
				}

				.nav-wideScreen {
					display: flex;
					flex-direction: row;
					justify-content: space-between;
					margin: auto;
					max-width: $max-width-margins;
					padding: 0 rem(16);
				}

				nav.primary-nav {
					background-color: transparent;
					display: flex;
					flex: 1;
					flex-direction: row;
					justify-content: space-around;
					position: inherit;
					top: rem(120);
					width: auto;
					z-index: 0;

					a {
						border-bottom: none;
						float: none;
						margin: rem(24) rem(8);
						padding: rem(8) rem(10);
					}

					// When the user is in a section (other than the Home page), underline this particular item
					// in the top level navigation.
					a[aria-current="page"] {
						border-bottom: rem(2) solid $white;
					}
				}
			}
		}
	}
}

// This media query breakpoint comes the width of the Galaxy Fold screen.
@media screen and (max-width: rem(280)) {
	header .site-nav-wrapper .site-nav .nav-smallScreen .starter-nav #menuToggleButton::after {
		content: "";
	}
}

